# Bookstore

./: .gitignore  Dockerfile  docker-compose.yml  output.txt  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: build.yml  workflow-pr.yml
bookstore/: asgi.py  settings.py  urls.py  wsgi.py
order/: admin.py  factories.py  urls.py
order/migrations/: 0001_initial.py
order/models/: __init__.py  order.py
order/serializers/: __init__.py
order/tests/test_serializers/: __init__.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: __init__.py  order_viewset.py
product/: admin.py  factories.py  urls.py
product/migrations/: 0001_initial.py
product/models/: __init__.py  category.py  product.py
product/serializers/: __init__.py
product/tests/test_serializers/: test_category_serializer.py  test_product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: __init__.py  category_viewset.py  product_viewset.py
